--- a/src/main/resources/policyproposal-to-client-mapping.properties
+++ b/src/main/resources/policyproposal-to-client-mapping.properties
@@ -1,37 +1,23 @@
-entId=cliententid
-party=clientparty
-clientNumber=clientclntnum
-clientType=clientclnttype
-addressType=clientaddrtype
-birthPlace=clientbirthp
-address01=clientcltaddr01
-address02=clientcltaddr02
-address03=clientcltaddr03
-address04=clientcltaddr04
-dateOfBirth=clientcltdobx
-postalCode=clientcltpcode
-phone01=clientcltphone01
-phone02=clientcltphone02
-gender=clientcltsex
-countryCode=clientctrycode
-directMailIndicator=clientdirmail
-documentNumber=clientdocno
-email=clientemail
-ethnicOrigin=clientethorig
-givenName=clientgivname
-language=clientlanguage
-mailingIndicator=clientmailing
-marriedIndicator=clientmarryd
-middleName01=clientmiddl01
-middleName02=clientmiddl02
-nationality=clientnatlty
-occupationCode=clientoccpcode
-prefCom=clientprefcom
-salutaion=clientsalutl
-securityNumber=clientsecuityno
-sourceOfEvidence=clientsoe
-statusCode=clientstatcode
-surName=clientsurname
-vipIndicator=clientvip
-forTheAttentionOf=clientfao
-corporateName=clientcorpname
+addressType=addrtype
+birthPlace=birthp
+address01=cltaddr01
+address02=cltaddr02
+address03=cltaddr03
+address04=cltaddr04
+postalCode=cltpcode
+phone01=cltphone01
+gender=cltsex
+countryCode=ctrycode
+directMailIndicator=dirmail
+documentNumber=docno
+givenName=lgivname
+mailingIndicator=mailing
+marriedIndicator=marryd
+nationality=natlty
+occupationCode=occpcode
+salutaion=salutl
+securityNumber=secuityno
+sourceOfEvidence=soe
+statusCode=statcode
+surName=lsurname
+vipIndicator=vip
