--- a/src/main/resources/policyproposal-to-newbusinessmapping.properties
+++ b/src/main/resources/policyproposal-to-newbusinessmapping.properties
@@ -1,18 +1,18 @@
 applyCashDetails.applyCashId=nbscrtiapplycash.applycashentid
 applyCashDetails.receiptNo=nbscrtiapplycash.receiptno
 assignees.assigneeId=assignees.assigneeentid
-assignees.assigneeDetails=assignees.nbscrtiassigneedetails   #List
+#assignees.assigneeDetails=assignees.nbscrtiassigneedetails   #List
 bankDetails.bankAccountId=nbscrtibankdetails.bankaccentid
 bankDetails.clientSelectionWithBankDetails=nbscrtibankdetails.cbnksel
 bankDetails.bankAccountDesc=nbscrtibankdetails.bankaccdsc
 bankDetails.bankAccountKey=nbscrtibankdetails.bankacount
 bankDetails.bankKey=nbscrtibankdetails.bankkey
 bankDetails.currencyCode=nbscrtibankdetails.currcode
-bankDetails.datefrom=nbscrtibankdetails.datefrom 				#Date
+#bankDetails.datefrom=nbscrtibankdetails.datefrom 				#Date
 bankDetails.factoringHouse=nbscrtibankdetails.facthous
 beneficiary.beneficiaryId=beneficiary.beneficiaryentid
-beneficiary.beneficiaryDetails=beneficiary.nbscrtibendetails	#List
-clientDetails=nbscrticlient										#List
+#beneficiary.beneficiaryDetails=beneficiary.nbscrtibendetails	#List
+#clientDetails=nbscrticlient										#List
 #clientDetails.entId=nbscrticlient.cliententid
 #clientDetails.party=nbscrticlient.clientparty
 #clientDetails.clientNumber=nbscrticlient.clientclntnum
@@ -54,7 +54,7 @@ contractDetails.contractHDREntId=nbscrticontracthdrdetails.contracthdrentid
 contractDetails.contractNumber=nbscrticontracthdrdetails.chdrsel
 contractDetails.contractType=nbscrticontracthdrdetails.chdrtype
 contractDetails.agentNumber=nbscrticontracthdrdetails.agntsel
-contractDetails.billingRenewalDate=nbscrticontracthdrdetails.billcd   #Date
+#contractDetails.billingRenewalDate=nbscrticontracthdrdetails.billcd   #Date
 contractDetails.billingCurrency=nbscrticontracthdrdetails.billcurr
 contractDetails.billingfrequency=nbscrticontracthdrdetails.billfreq
 contractDetails.billingRenewalIndicator=nbscrticontracthdrdetails.billcdind
@@ -65,7 +65,7 @@ contractDetails.planSuffix=nbscrticontracthdrdetails.plansuff
 contractDetails.register=nbscrticontracthdrdetails.register
 contractDetails.accountType=nbscrticontracthdrdetails.srcebus
 contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
-coverageDetails=nbscrticoveragedetails   									#List
+#coverageDetails=nbscrticoveragedetails   									#List
 dispatchDetails.despatchId=nbscrtidespatchdetails.despatchentid
 dispatchDetails.despatchParty=nbscrtidespatchdetails.despatchparty
 doctorDetails.doctorId=nbscrtidoctor.doctorentid
@@ -74,17 +74,17 @@ doctorDetails.doctorParty=nbscrtidoctor.doctorparty
 doctorDetails.doctorType=nbscrtidoctor.docttype
 followUps.followUpsId=followups.followupsentid
 followUps.zDoctor=followups.zdoctor
-followUps.followUpsDetails=followups.nbscrtifups #List
-fundDetails=nbscrtifunddetails					 #List
+#followUps.followUpsDetails=followups.nbscrtifups #List
+#fundDetails=nbscrtifunddetails					 #List
 jointOwnerDetails.jointOwnerId=nbscrtijointowner.jointownerentid
 jointOwnerDetails.jointOwnerParty=nbscrtijointowner.jointownerparty
-lifeDetails=nbscrtilives 						#List
+#lifeDetails=nbscrtilives 						#List
 mandateDetails.mandateId=nbscrtimandatedetails.mandateentid
 mandateDetails.clientNumber=nbscrtimandatedetails.clntnum
 mandateDetails.mandateRefNumber=nbscrtimandatedetails.mandref
 mandateDetails.bankAccountKey=nbscrtimandatedetails.bankacckey
 mandateDetails.bankKey=nbscrtimandatedetails.bankkey
-mandateDetails.effectiveDate=nbscrtimandatedetails.effdate		#Date
+#mandateDetails.effectiveDate=nbscrtimandatedetails.effdate		#Date
 mandateDetails.factoringHouse=nbscrtimandatedetails.facthous
 mandateDetails.mandateStatus=nbscrtimandatedetails.mandstat
 mandateDetails.timesToUse=nbscrtimandatedetails.timesuse
@@ -106,10 +106,10 @@ premiumRCTDetails.paymentType=nbscrtipremiumrctdetails.paytype
 premiumRCTDetails.recievedFromCode=nbscrtipremiumrctdetails.rfcode
 premiumRCTDetails.recievedFromNumber=nbscrtipremiumrctdetails.rfnum
 premiumRCTDetails.currencyRate=nbscrtipremiumrctdetails.scrate
-premiumRCTDetails.tranDate=nbscrtipremiumrctdetails.trandatex  #Date
+#premiumRCTDetails.tranDate=nbscrtipremiumrctdetails.trandatex 			 #Date
 premiumRCTDetails.protectIndicator=nbscrtipremiumrctdetails.prtind
 premiumRCTDetails.dissectionNumber=nbscrtipremiumrctdetails.dissec
-premiumRCTDetails.sfldetails=nbscrtipremiumrctdetails.sfl  	#List
-questionDetails=nbscrtiquestion   #List
-riderDetails=nbscrtiriderdetails				 #List
-specialTerms.specialTermsDetails=specialterms.nbscrtispecialterms		#List
+#premiumRCTDetails.sfldetails=nbscrtipremiumrctdetails.sfl  	#List
+#questionDetails=nbscrtiquestion   #List
+#riderDetails=nbscrtiriderdetails				 #List
+#specialTerms.specialTermsDetails=specialterms.nbscrtispecialterms		#List
