--- a/resources/policyproposal-to-newbusinessmapping.properties
+++ b/resources/policyproposal-to-newbusinessmapping.properties
@@ -1,30 +1,30 @@
-#applyCashDetails.applyCashId=nbscrtiapplycash.applycashentid
-#applyCashDetails.receiptNo=nbscrtiapplycash.receiptno
-#assignees.assigneeId=assignees.assigneeentid
-#bankDetails.bankAccountId=nbscrtibankdetails.bankaccentid
-#bankDetails.clientSelectionWithBankDetails=nbscrtibankdetails.cbnksel
-#bankDetails.bankAccountDesc=nbscrtibankdetails.bankaccdsc
-#bankDetails.bankAccountKey=nbscrtibankdetails.bankacount
-#bankDetails.bankKey=nbscrtibankdetails.bankkey
-#bankDetails.currencyCode=nbscrtibankdetails.currcode
-#bankDetails.factoringHouse=nbscrtibankdetails.facthous
-#beneficiary.beneficiaryId=beneficiary.beneficiaryentid
+applyCashDetails.applyCashId=nbscrtiapplycash.applycashentid
+applyCashDetails.receiptNo=nbscrtiapplycash.receiptno
+assignees.assigneeId=assignees.assigneeentid
+bankDetails.bankAccountId=nbscrtibankdetails.bankaccentid
+bankDetails.clientSelectionWithBankDetails=nbscrtibankdetails.cbnksel
+bankDetails.bankAccountDesc=nbscrtibankdetails.bankaccdsc
+bankDetails.bankAccountKey=nbscrtibankdetails.bankacount
+bankDetails.bankKey=nbscrtibankdetails.bankkey
+bankDetails.currencyCode=nbscrtibankdetails.currcode
+bankDetails.factoringHouse=nbscrtibankdetails.facthous
+beneficiary.beneficiaryId=beneficiary.beneficiaryentid
 contractDetails.contractHDREntId=nbscrticontracthdrdetails.contracthdrentid
 contractDetails.contractNumber=nbscrticontracthdrdetails.chdrsel
 contractDetails.contractType=nbscrticontracthdrdetails.chdrtype
-#contractDetails.agentNumber=nbscrticontracthdrdetails.agntsel
-#contractDetails.billingCurrency=nbscrticontracthdrdetails.billcurr
-#contractDetails.billingfrequency=nbscrticontracthdrdetails.billfreq
-#contractDetails.billingRenewalIndicator=nbscrticontracthdrdetails.billcdind
-#contractDetails.contractCurrency=nbscrticontracthdrdetails.cntcurr
-#contractDetails.methodOfPayment=nbscrticontracthdrdetails.mop
-#contractDetails.proposalDate=nbscrticontracthdrdetails.hpropdte
-#contractDetails.planSuffix=nbscrticontracthdrdetails.plansuff
-#contractDetails.register=nbscrticontracthdrdetails.register
-#contractDetails.accountType=nbscrticontracthdrdetails.srcebus
-#contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
-#dispatchDetails.despatchId=nbscrtidespatchdetails.despatchentid
-#dispatchDetails.despatchParty=nbscrtidespatchdetails.despatchparty
+contractDetails.agentNumber=nbscrticontracthdrdetails.agntsel
+contractDetails.billingCurrency=nbscrticontracthdrdetails.billcurr
+contractDetails.billingfrequency=nbscrticontracthdrdetails.billfreq
+contractDetails.billingRenewalIndicator=nbscrticontracthdrdetails.billcdind
+contractDetails.contractCurrency=nbscrticontracthdrdetails.cntcurr
+contractDetails.methodOfPayment=nbscrticontracthdrdetails.mop
+contractDetails.proposalDate=nbscrticontracthdrdetails.hpropdte
+contractDetails.planSuffix=nbscrticontracthdrdetails.plansuff
+contractDetails.register=nbscrticontracthdrdetails.register
+contractDetails.accountType=nbscrticontracthdrdetails.srcebus
+contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
+dispatchDetails.despatchId=nbscrtidespatchdetails.despatchentid
+dispatchDetails.despatchParty=nbscrtidespatchdetails.despatchparty
 #followUps.followUpsId=followups.followupsentid
 #jointOwnerDetails.jointOwnerId=nbscrtijointowner.jointownerentid
 #jointOwnerDetails.jointOwnerParty=nbscrtijointowner.jointownerparty
