--- a/resources/policyproposal-to-newbusinessmapping.properties
+++ b/resources/policyproposal-to-newbusinessmapping.properties
@@ -25,34 +25,34 @@ contractDetails.accountType=nbscrticontracthdrdetails.srcebus
 contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
 dispatchDetails.despatchId=nbscrtidespatchdetails.despatchentid
 dispatchDetails.despatchParty=nbscrtidespatchdetails.despatchparty
-#followUps.followUpsId=followups.followupsentid
-#jointOwnerDetails.jointOwnerId=nbscrtijointowner.jointownerentid
-#jointOwnerDetails.jointOwnerParty=nbscrtijointowner.jointownerparty
-#mandateDetails.mandateId=nbscrtimandatedetails.mandateentid
-#mandateDetails.clientNumber=nbscrtimandatedetails.clntnum
-#mandateDetails.mandateRefNumber=nbscrtimandatedetails.mandref
-#mandateDetails.bankAccountKey=nbscrtimandatedetails.bankacckey
-#mandateDetails.bankKey=nbscrtimandatedetails.bankkey
-#mandateDetails.factoringHouse=nbscrtimandatedetails.facthous
-#mandateDetails.mandateStatus=nbscrtimandatedetails.mandstat
-#mandateDetails.timesToUse=nbscrtimandatedetails.timesuse
-#ownerDetails.ownerentId=nbscrtiowner.ownerentid
-#ownerDetails.ownerParty=nbscrtiowner.ownerparty
-#payerDetails.payerId=nbscrtipayerdetails.payerentid
-#payerDetails.payerParty=nbscrtipayerdetails.payerparty
-#premiumRCTDetails.premiumRCTId=nbscrtipremiumrctdetails.premiumrctentid
-#premiumRCTDetails.bankedFlag=nbscrtipremiumrctdetails.bankedflag
-#premiumRCTDetails.bankCode=nbscrtipremiumrctdetails.bankcode
-#premiumRCTDetails.bankDesc01=nbscrtipremiumrctdetails.bankdesc01
-#premiumRCTDetails.bankDesc02=nbscrtipremiumrctdetails.bankdesc02
-#premiumRCTDetails.bankDesc03=nbscrtipremiumrctdetails.bankdesc03
-#premiumRCTDetails.bankKey=nbscrtipremiumrctdetails.bankkey
-#premiumRCTDetails.cheqNumber=nbscrtipremiumrctdetails.cheqno
-#premiumRCTDetails.documentAmount=nbscrtipremiumrctdetails.docorigamt
-#premiumRCTDetails.originalCurrency=nbscrtipremiumrctdetails.origcurr
-#premiumRCTDetails.paymentType=nbscrtipremiumrctdetails.paytype
-#premiumRCTDetails.recievedFromCode=nbscrtipremiumrctdetails.rfcode
-#premiumRCTDetails.recievedFromNumber=nbscrtipremiumrctdetails.rfnum
-#premiumRCTDetails.currencyRate=nbscrtipremiumrctdetails.scrate
-#premiumRCTDetails.protectIndicator=nbscrtipremiumrctdetails.prtind
-#premiumRCTDetails.dissectionNumber=nbscrtipremiumrctdetails.dissec
+followUps.followUpsId=followups.followupsentid
+jointOwnerDetails.jointOwnerId=nbscrtijointowner.jointownerentid
+jointOwnerDetails.jointOwnerParty=nbscrtijointowner.jointownerparty
+mandateDetails.mandateId=nbscrtimandatedetails.mandateentid
+mandateDetails.clientNumber=nbscrtimandatedetails.clntnum
+mandateDetails.mandateRefNumber=nbscrtimandatedetails.mandref
+mandateDetails.bankAccountKey=nbscrtimandatedetails.bankacckey
+mandateDetails.bankKey=nbscrtimandatedetails.bankkey
+mandateDetails.factoringHouse=nbscrtimandatedetails.facthous
+mandateDetails.mandateStatus=nbscrtimandatedetails.mandstat
+mandateDetails.timesToUse=nbscrtimandatedetails.timesuse
+ownerDetails.ownerentId=nbscrtiowner.ownerentid
+ownerDetails.ownerParty=nbscrtiowner.ownerparty
+payerDetails.payerId=nbscrtipayerdetails.payerentid
+payerDetails.payerParty=nbscrtipayerdetails.payerparty
+premiumRCTDetails.premiumRCTId=nbscrtipremiumrctdetails.premiumrctentid
+premiumRCTDetails.bankedFlag=nbscrtipremiumrctdetails.bankedflag
+premiumRCTDetails.bankCode=nbscrtipremiumrctdetails.bankcode
+premiumRCTDetails.bankDesc01=nbscrtipremiumrctdetails.bankdesc01
+premiumRCTDetails.bankDesc02=nbscrtipremiumrctdetails.bankdesc02
+premiumRCTDetails.bankDesc03=nbscrtipremiumrctdetails.bankdesc03
+premiumRCTDetails.bankKey=nbscrtipremiumrctdetails.bankkey
+premiumRCTDetails.cheqNumber=nbscrtipremiumrctdetails.cheqno
+premiumRCTDetails.documentAmount=nbscrtipremiumrctdetails.docorigamt
+premiumRCTDetails.originalCurrency=nbscrtipremiumrctdetails.origcurr
+premiumRCTDetails.paymentType=nbscrtipremiumrctdetails.paytype
+premiumRCTDetails.recievedFromCode=nbscrtipremiumrctdetails.rfcode
+premiumRCTDetails.recievedFromNumber=nbscrtipremiumrctdetails.rfnum
+premiumRCTDetails.currencyRate=nbscrtipremiumrctdetails.scrate
+premiumRCTDetails.protectIndicator=nbscrtipremiumrctdetails.prtind
+premiumRCTDetails.dissectionNumber=nbscrtipremiumrctdetails.dissec
