--- a/resources/policyproposal-to-newbusinessmapping.properties
+++ b/resources/policyproposal-to-newbusinessmapping.properties
@@ -18,7 +18,7 @@ contractDetails.billingfrequency=nbscrticontracthdrdetails.billfreq
 contractDetails.billingRenewalIndicator=nbscrticontracthdrdetails.billcdind
 contractDetails.contractCurrency=nbscrticontracthdrdetails.cntcurr
 contractDetails.methodOfPayment=nbscrticontracthdrdetails.mop
-contractDetails.proposalDate=nbscrticontracthdrdetails.hpropdte
+#contractDetails.proposalDate=nbscrticontracthdrdetails.hpropdte
 contractDetails.planSuffix=nbscrticontracthdrdetails.plansuff
 contractDetails.register=nbscrticontracthdrdetails.register
 contractDetails.accountType=nbscrticontracthdrdetails.srcebus
