--- a/resources/flink-kafka-config.properties
+++ b/resources/flink-kafka-config.properties
@@ -1,4 +1,4 @@
 bootstrap.servers=localhost:9092
-topic.name=ILSourceTopic
+newbusiness.proposal.topic.name=ILSourceTopic
 zookeeper.connect=localhost:2181
 group.id=ilResponse
