--- a/resources/policyproposal-to-newbusinessmapping.properties
+++ b/resources/policyproposal-to-newbusinessmapping.properties
@@ -22,7 +22,7 @@ contractDetails.methodOfPayment=nbscrticontracthdrdetails.mop
 contractDetails.planSuffix=nbscrticontracthdrdetails.plansuff
 contractDetails.register=nbscrticontracthdrdetails.register
 contractDetails.accountType=nbscrticontracthdrdetails.srcebus
-contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
+#contractDetails.originalCommencementDate=nbscrticontracthdrdetails.occdate
 dispatchDetails.despatchId=nbscrtidespatchdetails.despatchentid
 dispatchDetails.despatchParty=nbscrtidespatchdetails.despatchparty
 followUps.followUpsId=followups.followupsentid
