--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.xml.messaging.saaj/saaj-impl -->
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>1.3.15</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.flink/flink-java -->
 		<dependency>
 			<groupId>org.apache.flink</groupId>
