--- a/resources/il-config.properties
+++ b/resources/il-config.properties
@@ -1,9 +1,9 @@
-client.requestparam.value = U
-client.requestparam.name = COMPANY
+client.requestparam.value = A
+client.requestparam.name = FSU_COMPANY
 client.userid=ld8test
 client.password=q1w2e3r4
 
-newbusiness.requestparam.value = U
+newbusiness.requestparam.value = Z
 newbusiness.requestparam.name = COMPANY
 newbusiness.userid=ld8test
 newbusiness.password=q1w2e3r4
