--- a/resources/il-config.properties
+++ b/resources/il-config.properties
@@ -1,10 +1,17 @@
-client.requestparam.value = A
-client.requestparam.name = FSU_COMPANY
+zambia.client.requestparam.value = A
+zambia.client.requestparam.name = FSU_COMPANY
+zambia.newbusiness.requestparam.value = Z
+zambia.newbusiness.requestparam.name = COMPANY
+
+uganda.client.requestparam.value = B
+uganda.client.requestparam.name = FSU_COMPANY
+uganda.newbusiness.requestparam.value = U
+uganda.newbusiness.requestparam.name = COMPANY
+
 client.userid=ld8test
 client.password=q1w2e3r4
 
-newbusiness.requestparam.value = Z
-newbusiness.requestparam.name = COMPANY
+
 newbusiness.userid=ld8test
 newbusiness.password=q1w2e3r4
 
