--- a/resources/policyproposal-to-client-mapping.properties
+++ b/resources/policyproposal-to-client-mapping.properties
@@ -4,8 +4,10 @@ address01=cltaddr01
 address02=cltaddr02
 address03=cltaddr03
 address04=cltaddr04
+address05=cltaddr05
 postalCode=cltpcode
 phone01=cltphone01
+phone02=cltphone02
 gender=cltsex
 countryCode=ctrycode
 directMailIndicator=dirmail
