Code Refactoring done.

--- a/resources/client-mapper/proposal-to-client-mapping.properties
+++ b/resources/client-mapper/proposal-to-client-mapping.properties
@@ -17,7 +17,7 @@ mailingIndicator=mailing
 marriedIndicator=marryd
 nationality=natlty
 occupationCode=occpcode
-salutaion=salutl
+salutation=salutl
 securityNumber=secuityno
 sourceOfEvidence=soe
 statusCode=statcode
