--- a/resources/il-config/il-config.properties
+++ b/resources/il-config/il-config.properties
@@ -8,10 +8,10 @@ uganda.client.requestparam.name = FSU_COMPANY
 uganda.newbusiness.requestparam.value = U
 uganda.newbusiness.requestparam.name = COMPANY
 
-client.userid=ld8test
-client.password=q1w2e3r4
+client.userid=LD8ACC1
+client.password=LD8ACC1
 
 
-newbusiness.userid=ld8test
-newbusiness.password=q1w2e3r4
+newbusiness.userid=LD8ACC1
+newbusiness.password=LD8ACC1
 
