--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,21 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<repositories>
-	<repository>
-		<snapshots>
-			<enabled>true</enabled>
-		</snapshots>
-		<id>central</id>
-		<name>maven-release</name>
-		<url>https://artifactory.intranet.asia:443/artifactory/maven-release</url>
-	</repository>
-	<repository>
-		<snapshots />
-		<id>snapshots</id>
-		<name>maven-release</name>
-		<url>https://artifactory.intranet.asia:443/artifactory/maven-release</url>
-	</repository>
-</repositories>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>maven-release</name>
+			<url>https://artifactory.intranet.asia:443/artifactory/maven-release</url>
+		</repository>
+		<repository>
+			<snapshots />
+			<id>snapshots</id>
+			<name>maven-release</name>
+			<url>https://artifactory.intranet.asia:443/artifactory/maven-release</url>
+		</repository>
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<snapshots>
@@ -48,8 +48,11 @@
 			<artifactId>saaj-impl</artifactId>
 			<version>1.4.0</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
+		</dependency>
 		<!-- flink dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -100,6 +103,16 @@
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-core</artifactId>
 			<version>0.9.1</version>
+			<exclusions>
+				<exclusion>  <!-- declare the exclusion here -->
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>  <!-- declare the exclusion here -->
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- ESB Services -->
